// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component should Exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "Tab": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "active": false,
      "as": "a",
    },
    "render": [Function],
  },
  "defaultProps": Object {
    "as": "div",
    "fullwidth": false,
  },
  "render": [Function],
}
`;

exports[`Tabs component should accept a react Element as renderAs prop 1`] = `
<p
  className="tabs"
>
  Custom
  <ul>
    This should be a p element
  </ul>
</p>
`;

exports[`Tabs component should concat Bulma class with classes in props 1`] = `
<div
  className="tabs other-class test"
>
  <ul>
    Facebook
  </ul>
</div>
`;

exports[`Tabs component should expose Tab 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "active": false,
    "as": "a",
  },
  "render": [Function],
}
`;

exports[`Tabs component should have Tabs classname 1`] = `
<div
  className="tabs"
>
  <ul>
    Facebook
  </ul>
</div>
`;

exports[`Tabs component should have custom inline styles 1`] = `
<section
  className="tabs"
  style={
    Object {
      "width": 200,
      "zIndex": 1,
    }
  }
>
  <ul>
    This should be a section with custom styles
  </ul>
</section>
`;

exports[`Tabs component should render as an html section 1`] = `
<section
  className="tabs"
>
  <ul>
    This should be a section
  </ul>
</section>
`;

exports[`Tabs component should render propertly Inside Tabs 1`] = `
<div
  className="tabs"
>
  <ul>
    <li
      className=""
    >
      <a>
        Tab 1
      </a>
    </li>
    <li
      className=""
    >
      <a>
        Tab 2
      </a>
    </li>
    <li
      className=""
    >
      <a>
        Tab 3
      </a>
    </li>
  </ul>
</div>
`;
